# dj3base

./: .coveragerc  .gitignore  HISTORY.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
dj3base/: request.py  type_hints.py
dj3base/admin/: ordered_admin_site.py  readonly_model_admin.py
dj3base/admin/admins/: __init__.py  readonly_model_admin.py
dj3base/admin/sites/: ordered_admin_site.py  rate_limit_login_form.py
dj3base/admin_utils/sites/: __init__.py  rate_limit_login_form.py
dj3base/commands/: __init__.py  singleton_command.py
dj3base/exceptions/: error_handling_middleware.py  errors.py
dj3base/field_utils/validators/: __init__.py
dj3base/fields/validators/: regex_instances.py
dj3base/middlewares/: __init__.py  error_handling_middleware.py
dj3base/others/: email_utils.py
dj3base/utils/: email_utils.py  log_utils.py  permission_utils.py  request_utils.py  response_utils.py  test_utils.py  validator_utils.py
dj3base/views/: __init__.py  post_json_view.py  simple_post_json_view.py  utils.py
tests/: .coveragerc
tests/test_app/: views.py
tests/test_app/tests/: test_post_json_view.py
tests/test_project/: asgi.py  settings.py  urls.py  wsgi.py
